module(
    name = "mongodb_scaling_test",
    version = "0.1",
)

bazel_dep(name = "rules_jvm_external", version = "5.2")
bazel_dep(name = "bazel_skylib", version = "1.3.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.mongodb:mongodb-driver-sync:4.9.1",
        "org.slf4j:slf4j-api:1.7.36",
        "ch.qos.logback:logback-classic:1.2.12",
        "net.datafaker:datafaker:2.4.0",
        "io.opentelemetry:opentelemetry-api:1.28.0",
        "io.opentelemetry:opentelemetry-sdk:1.28.0",
        "io.opentelemetry:opentelemetry-exporter-logging:1.28.0",
        "io.opentelemetry:opentelemetry-sdk-common:1.28.0",
        "io.opentelemetry:opentelemetry-sdk-metrics:1.28.0",
        "io.opentelemetry:opentelemetry-semconv:1.28.0-alpha",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")
